@@ -7,6 +7,9 @@
      [serverloop.c]
      only pass channel requests on session channels through to the session
      channel handler, avoiding spurious log messages; ok! markus@
+   - djm@cvs.openbsd.org 2008/06/30 12:16:02
+     [nchan.c]
+     only send eow@openssh.com notifications for session channels; ok! markus@
 
 20080630
  - (djm) OpenBSD CVS Sync
@@ -4490,4 +4493,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5040 2008/07/02 12:32:14 dtucker Exp $
+$Id: ChangeLog,v 1.5041 2008/07/02 12:32:43 dtucker Exp $
